--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,9 @@
 }
 
 body {
-    background-color: rgb(228, 190, 223);
+    background-color: rgb(137, 113, 202);
+    COLOR:BLUE;
+    text-decoration-color: #00ff00;
     font-family: "Audiowide", sans-serif;
 }
 
